fix: checkbox label spacing (#47)
* fix: checkbox label spacing

* Design System Build

---------

--- a/styles/themes/Vader.css
+++ b/styles/themes/Vader.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Mon, 13 Feb 2023 05:22:47 GMT
+ * Generated on Mon, 13 Feb 2023 05:37:18 GMT
  */
 
 :root {
@@ -600,7 +600,7 @@
   --ros-component-checkbox-line-height-label: 150%;
   --ros-component-checkbox-font-family-label: Inter;
   --ros-component-checkbox-font-size-label: 0.875rem;
-  --ros-component-checkbox-spacing-space-between: 8px;
+  --ros-component-checkbox-spacing-space-between: 32px;
   --ros-component-checkbox-border-width-disabled: 1px;
   --ros-component-checkbox-border-width-key-focus: 2px;
   --ros-component-checkbox-border-width-hover: 1px;
